force-app/main/default/objects/Portal_User_Profile__c/Portal_User_Profile__c.object-meta.xml
<CustomObject>
    <label>Portal User Profile</label>
    <nameField>
        <displayFormat>PUP-{0000}</displayFormat>
        <label>Portal User Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal User Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>