force-app/main/default/objects/Portal_User_Profile__c/fields/Approval_Scope__c.field-meta.xml
<CustomField>
    <fullName>Approval_Scope__c</fullName>
    <label>Approval Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Direct Reports</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>All Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>