force-app/main/default/objects/Portal_User_Profile__c/fields/Can_Approve__c.field-meta.xml
<CustomField>
    <fullName>Can_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Approve</label>
    <type>Checkbox</type>
</CustomField>