force-app/main/default/objects/Portal_User_Profile__c/fields/Developer_Key__c.field-meta.xml
<CustomField>
    <fullName>Developer_Key__c</fullName>
    <description>Stable profile identifier used for controlled configuration and migration.</description>
    <externalId>true</externalId>
    <label>Developer Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>