force-app/main/default/objects/Portal_User_Profile__c/fields/Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Type__c</fullName>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Payroll Administrator</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>